# openbsc

./: .gitignore  .gitreview  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  bscconfig.h.in  configure  configure.ac  configure.in  git-version-gen  openbsc.pc.in
openbsc/: .gitignore  AUTHORS  Makefile.am  README  README.vty-tests  configure.ac  configure.in  liblaf0rge1.pc.in  libsccp.pc.in  openbsc.pc.in  osmoappdesc.py
openbsc/contrib/: README  bsc_control.py  bt.py  convert_to_enum.py  ctrl2sse.py  dump_all_docs.py  gb-proxy-unblock-bug.py  hlr-remove-old.sql  ipa.py  mgcp_server.py  send_handshake.py  soap.py  twisted_ipa.py
openbsc/contrib/a-link/: sccp-split-by-con.lua
openbsc/contrib/bsc-test/: README  all_dial  dial.sh  drop-oml.sh  drop.sh  hangup  msc.sh
openbsc/contrib/gprs/: gb-proxy-unblock-bug.py  gprs-bssgp-histogram.lua  gprs-buffer-count.lua  gprs-size-count.lua  gprs-split-trace-by-tlli.lua  gprs-verify-nu.lua
openbsc/contrib/nat/: test_regexp.c  ussd_example.py
openbsc/contrib/rtp/: gen_rtp_header.erl  rtp_replay.st  rtp_replay_shared.st  rtp_replay_sip.st  timestamp_rtp.lua
openbsc/contrib/sms/: fill-hlr.st  hlr-query.st  sqlite-probe.tap.d
openbsc/contrib/systemd/: Makefile.am  osmo-bsc-mgcp.service  osmo-bsc-nat.service  osmo-bsc-sccplite.service  osmo-bsc.service  osmo-gbproxy.service  osmo-msc.service  osmo-nitb.service  osmo-sgsn.service
openbsc/contrib/testconv/: Makefile  testconv_main.c
openbsc/debian/: changelog  control  copyright  osmo-bsc-mgcp.service  osmocom-bs11-utils.install  osmocom-bsc-nat.install  osmocom-bsc.install  osmocom-gbproxy.install  osmocom-ipaccess-utils.install  osmocom-nitb.default  osmocom-nitb.examples  osmocom-nitb.init  osmocom-nitb.install  osmocom-sgsn.install  rules
openbsc/debian/patches/: debian-changes-0.9.4-1  series
openbsc/doc/: Makefile.am  call-graphs-MSC-BSC-HNBGW.txt  channel_release.txt  control-interface.txt  e1-data-model.txt  gprs.txt  gsm-hopping.txt  handover.txt  ipa-sccp.txt  libbsc-data-structures.dot  libmsc-data-structures.dot  oml-interface.txt  osmo-nitb-data_structures.dot  paging.txt  regen_doc.sh  sgsn-remote-protocol.txt
openbsc/doc/examples/: Makefile.am  openbsc.cfg.nanobts  openbsc.cfg.rbs2308-4trx
openbsc/include/: Makefile.am  compat_af_isdn.h
openbsc/include/openbsc/: Makefile.am  a_iface.h  a_iface_bssap.h  a_reset.h  abis_nm.h  abis_om2000.h  abis_rsl.h  acc_ramp.h  arfcn_range_encode.h  auth.h  bitvec.h  bsc_api.h  bsc_msc.h  bsc_msc_data.h  bsc_msc_grace.h  bsc_msc_rf.h  bsc_msg_filter.h  bsc_nat.h  bsc_nat_callstats.h  bsc_nat_sccp.h  bsc_rll.h  bsc_subscriber.h  bss.h  bssap.h  bts_ipaccess_nanobts_omlattr.h  call_handling.h  chan_alloc.h  common.h  common_bsc.h  common_cs.h  comp128.h  control_cmd.h  control_if.h  crc24.h  ctrl.h  db.h  debug.h  e1_config.h  e1_input.h  filter_abis.h  (+108 more)
openbsc/include/osmocom/: Makefile.am
openbsc/include/sccp/: Makefile.am  sccp.h  sccp_types.h
openbsc/include/vty/: command.h  vty.h
openbsc/m4/: README
openbsc/src/: Makefile.am  abis_nm.c  abis_nm_ipaccess.c  abis_nm_vty.c  abis_om2000.c  abis_om2000_vty.c  abis_rsl.c  arfcn_list_range.c  auth.c  bitvec.c  bs11_config.c  bsc-nat.cfg  bsc_api.c  bsc_hack.c  bsc_init.c  bsc_mgcp.c  bsc_msc.c  bsc_msc_grace.c  bsc_msc_ip.c  bsc_msc_rf.c  bsc_rll.c  bsc_version.c  bsc_vty.c  bssap.c  bts_ericsson_rbs2000.c  bts_ipaccess_nanobts.c  bts_siemens_bs11.c  bts_unknown.c  chan_alloc.c  common_vty.c  comp128.c  crc24.c  db.c  debug.c  e1_config.c  e1_input.c  e1_input_vty.c  gb_proxy.c  gb_proxy_main.c  gb_proxy_vty.c  (+69 more)
openbsc/src/abis/: e1_input.c
openbsc/src/bsc/: Makefile.am  bsc_vty.c  bts_ericsson_rbs2000.c  bts_unknown.c  meas_proc.c  meas_rep.c  osmo_bsc_api.c  osmo_bsc_audio.c  (+8 more)
openbsc/tests/: Makefile.am  atlocal.in  ctrl_test_runner.py  smpp_test_runner.py  sms.txt  testsuite.at  vty_test_runner.py
openbsc/tools/: 26c3-guru-import.py  hlrstat.pl
src/: Makefile.am  Makefile.in  abis_nm.c  abis_rsl.c  bs11_config.c  bsc_hack.c  chan_alloc.c  db.c  db.h  db_test.c  debug.c  e1_config.c  e1_input.c  gsm_04_08.c  gsm_04_11.c  gsm_data.c  gsm_subscriber.c  gsm_utils.c  ipaccess-config.c  ipaccess-find.c  isdnsync.c  misdn.c  msgb.c  paging.c  rs232.c  select.c  signal.c  subchan_demux.c  telnet_interface.c  telnet_parser.l  timer.c  tlv_parser.c  trau_frame.c  trau_mux.c  vty_interface.c
src/gprs/: Makefile.in  gb_proxy.c  gb_proxy_main.c  gb_proxy_vty.c  gprs_gmm.c  gprs_llc.c  gprs_llc_vty.c  gprs_sgsn.c  gprs_sndcp.c  gprs_sndcp.h  gprs_sndcp_vty.c  sgsn_libgtp.c  sgsn_vty.c
src/input/: ipaccess.c  misdn.c
src/ipaccess/: Makefile.in  ipaccess-config.c  ipaccess-find.c  ipaccess-firmware.c  ipaccess-proxy.c  network_listen.c
src/libabis/: Makefile.am  Makefile.in  e1_input.c  e1_input_vty.c
src/libbsc/: Makefile.in  abis_nm.c  abis_nm_vty.c  abis_rsl.c  bsc_api.c  bsc_msc.c  bsc_vty.c  bts_ericsson_rbs2000.c  bts_hsl_femtocell.c  bts_init.c  bts_ipaccess_nanobts.c  bts_siemens_bs11.c  bts_unknown.c  chan_alloc.c  e1_config.c  gsm_04_08_utils.c  gsm_subscriber_base.c  handover_decision.c  handover_logic.c  paging.c  rest_octets.c  transaction.c
src/libcommon/: Makefile.in  bsc_version.c  common_vty.c  debug.c  gsm_data.c  socket.c
src/libgb/: Makefile.in
src/libmgcp/: Makefile.in  mgcp_network.c  mgcp_protocol.c
src/libmsc/: Makefile.am  Makefile.in  auth.c  db.c  gsm_04_08.c  gsm_04_11.c  gsm_04_80.c  sms_queue.c  transaction.c
src/libtrau/: Makefile.am  Makefile.in  subchan_demux.c  trau_frame.c
src/osmo-bsc/: Makefile.am  Makefile.in  osmo_bsc_audio.c  osmo_bsc_bssap.c  osmo_bsc_grace.c  osmo_bsc_main.c  osmo_bsc_msc.c  osmo_bsc_rf.c
src/osmo-bsc_mgcp/: Makefile.in  mgcp_main.c
src/osmo-bsc_nat/: Makefile.am  Makefile.in  bsc_mgcp_utils.c  bsc_nat_vty.c  bsc_sccp.c
src/osmo-nitb/: Makefile.am  Makefile.in
src/utils/: Makefile.am  Makefile.in  bs11_config.c  isdnsync.c  rs232.c
src/vty/: cardshell.h  command.c  vty.c
tests/db/: Makefile.am  Makefile.in  db_test.c
tests/sms/: Makefile.am  sms_test.c
(+747 files in other folders)
