dnl Process this file with autoconf to produce a configure script
AC_INIT

AM_INIT_AUTOMAKE(openbsc, 0.0alpha1)

dnl checks for programs
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL

dnl checks for libraries

dnl checks for header files
AC_HEADER_STDC
AC_CHECK_HEADERS(mISDNif.h)

dnl Checks for typedefs, structures and compiler characteristics

AC_OUTPUT(
    include/openbsc/Makefile
    include/Makefile
    src/Makefile
    tests/Makefile
    tests/debug/Makefile
    tests/timer/Makefile
    tests/sms/Makefile
    tests/gsm0408/Makefile
    tests/db/Makefile
    Makefile)
