dnl Process this file with autoconf to produce a configure script
AC_INIT

AM_INIT_AUTOMAKE(openbsc, 0.0alpha1)

dnl checks for programs
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl checks for libraries
AC_SEARCH_LIBS(crypt, crypt,
    [LIBCRYPT="-lcrypt"; AC_DEFINE([VTY_CRYPT_PW], [], [Use crypt functionality of vty.])])

dnl checks for header files
AC_HEADER_STDC

dnl Checks for typedefs, structures and compiler characteristics

AC_OUTPUT(
    openbsc.pc
    include/openbsc/Makefile
    include/vty/Makefile
    include/Makefile
    src/Makefile
    tests/Makefile
    tests/debug/Makefile
    tests/timer/Makefile
    tests/sms/Makefile
    tests/gsm0408/Makefile
    tests/db/Makefile
    Makefile)
