noinst_HEADERS = abis_nm.h abis_rsl.h db.h gsm_04_08.h gsm_data.h \
		 gsm_subscriber.h gsm_04_11.h debug.h signal.h \
		 misdn.h chan_alloc.h paging.h \
		 trau_mux.h rs232.h openbscdefines.h rtp_proxy.h \
		 bsc_rll.h mncc.h transaction.h ussd.h gsm_04_80.h \
		 silent_call.h mgcp.h meas_rep.h rest_octets.h \
		 system_information.h handover.h mgcp_internal.h \
		 vty.h socket.h e1_config.h trau_upqueue.h token_auth.h \
		 handover_decision.h rrlp.h control_if.h \
		crc24.h gprs_llc.h gprs_gmm.h \
		gb_proxy.h gprs_sgsn.h gsm_04_08_gprs.h sgsn.h \
		auth.h osmo_msc.h bsc_msc.h bsc_nat.h \
		osmo_bsc_rf.h osmo_bsc.h network_listen.h bsc_nat_sccp.h \
		osmo_msc_data.h osmo_bsc_grace.h sms_queue.h abis_om2000.h \
		bss.h gsm_data_shared.h control_cmd.h ipaccess.h mncc_int.h \
		arfcn_range_encode.h nat_rewrite_trie.h

openbsc_HEADERS = gsm_04_08.h meas_rep.h bsc_api.h
openbscdir = $(includedir)/openbsc
